# star-tidy

./: .gitignore  README.md  config.example.yaml  flow.py  main.py  nodes.py  pyproject.toml
.github/workflows/: star-classification.yml
utils/: call_llm.py  config.py  github_client.py  repo_analyzer.py  star_list_manager.py
